data/derived/comb/progs/unify/prog5521.ml.out
Characters 78-82:
  List.fold_right f base fs;;
                    ^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'b list
